--- a/first/index.css
+++ b/first/index.css
@@ -19,11 +19,10 @@
 }
 
 .footer-section {
-    width: 1200px;
+    position: absolute;
+    top: 900px;
+    left: 200px;
+    width: 1520px;
     height: 100px;
-    clear: both;
-    padding-left: 360px;
-    padding-right: 360px;
-    padding-bottom: 100px;
-    background-color: rgb(34, 34, 34);
+    background-color: rgb(17, 17, 17);
 }
