--- a/third/index.css
+++ b/third/index.css
@@ -12,26 +12,38 @@
     height: 74px;
     background-color: blue;
 }
-
+.text {
+    font-size: 35px;
+    text-align: center;
+    margin-top: 50px;
+    line-height: 50px;
+    letter-spacing: 3px;
+}
 #bar-1 {
-    margin-top: 300px;
+    position: absolute;
+    top: 600px;
     width: 100%;
     height: 100px;
     background-color: blue; 
 }
 
 #bar-2 {
+    position: absolute;
+    top: 700px;
     width: 100%;
     height: 100px;
     background-color: rgb(44, 255, 237); 
 }
 #bar-3 {
+    position: absolute;
+    top: 800px;
     width: 100%;
     height: 100px;
     background-color: rgb(168, 206, 124); 
 }
 #bar-4 {
-    clear: both;
+    position: absolute;
+    top: 900px;
     width: 100%;
     height: 100px;
     background-color: rgb(204, 202, 70); 
